--- a/software.html
+++ b/software.html
@@ -40,23 +40,23 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://boards.greenhouse.io/wellist/jobs/4503452002'>Job Application for Sr. Software Engineer at Wellist</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=orQ79fwh&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=n1nmqMwr'>Quotient Technology Inc. Careers - Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=orQ79fwh&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=n1nmqMwr'>Quotient Technology Inc. Careers - Senior Software Engineer</a></h5> 
+<p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/agoda/jobs/1937117'>Job Application for Senior Software Engineer - Big Data/Machine Learning at Agoda</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Singapore  Singapore  Singapore</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/agoda/jobs/1937192'>Job Application for Graduate Back End Software Engineer - Singapore at Agoda</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Singapore Singapore  Singapore, Singapore</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/agoda/jobs/1939340'>Job Application for Software Engineer - Big Data/Machine Learning at Agoda</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Singapore  Singapore  Singapore</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://www.welovegolang.com/jobs/software-engineer-backend-tokyo-relocation-provided-5689436834627584'>Software Engineer, Backend (Tokyo) (Relocation Provided) at Mercari, Inc. - We Love Go</a></h5> 
@@ -147,7 +147,7 @@
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=owK89fwh&__jvst=Employee+Referral&__jvsd=svdfVgwD&__jvsc=Twitter&bid=ntmiqMwO'>Palo Alto Networks Careers - Intern - Prisma Access Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=owK89fwh&__jvst=Employee+Referral&__jvsd=svdfVgwD&__jvsc=Twitter&bid=ntmiqMwO'>Palo Alto Networks Careers - Intern - Prisma Access Software Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -167,7 +167,7 @@
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, UT</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/3mnyo9otg71mzie1mr6po7n8do'>Senior Software Engineer | CardinalHire</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/3mnyo9otg71mzie1mr6po7n8do'>Senior Software Engineer | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Reston, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -261,7 +261,7 @@
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/drchrono/fd5eaa49-9dab-4ba3-b711-cb6db5043053'>DrChrono - Senior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drchrono/fd5eaa49-9dab-4ba3-b711-cb6db5043053'>DrChrono - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Hunt Valley, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -351,7 +351,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698613809-embedded-software-developer-sr-'>Bosch Group Embedded Software Developer Sr. | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698613809-embedded-software-developer-sr-'>Bosch Group Embedded Software Developer Sr. | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -431,7 +431,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qGjaVfwO&k=Job&j=oxvkbfwh&__jvst=Employee+Referral&__jvsd=s2B1Pgwe&__jvsc=Twitter&bid=njxVpMwr'>Spectra Logic Careers - Software Engineer / Developer - (Golang)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qGjaVfwO&k=Job&j=oxvkbfwh&__jvst=Employee+Referral&__jvsd=s2B1Pgwe&__jvsc=Twitter&bid=njxVpMwr'>Spectra Logic Careers - Software Engineer / Developer - (Golang)</a></h5> 
 <p><span class="badge badge-light">Boulder, Colorado  Boulder, Colorado</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
